// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`create 1`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 3`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[`get all 1`] = `
{
  "items": [
    {
      "address": "address",
      "bio": "test",
      "city": "Tehran",
      "country": "IR",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "email": "test@socious.io",
      "followers": 1,
      "followings": 0,
      "geoname_id": null,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9899993",
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "social_causes": [
        "SOCIAL",
        "MENTAL",
      ],
      "status": "ACTIVE",
      "type": "SOCIAL",
      "updated_at": Any<String>,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
    {
      "address": "address",
      "bio": "test",
      "city": "Tokyo",
      "country": "JP",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "email": "test@socious.io",
      "followers": 1,
      "followings": 0,
      "geoname_id": null,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9379911",
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "social_causes": [
        "SOCIAL",
        "HEALTH",
      ],
      "status": "ACTIVE",
      "type": "COOP",
      "updated_at": Any<String>,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 2,
}
`;

exports[`get filtered 1`] = `
{
  "items": [
    {
      "address": "address",
      "bio": "test",
      "city": "Tokyo",
      "country": "JP",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "email": "test@socious.io",
      "followers": 1,
      "followings": 0,
      "geoname_id": null,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9379911",
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "social_causes": [
        "SOCIAL",
        "HEALTH",
      ],
      "status": "ACTIVE",
      "type": "COOP",
      "updated_at": Any<String>,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;
